--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "task manager application",
   "main": "index.js",
+  "engines":{
+    "node":"14.x"
+  },
   "scripts": {
+    "start":"node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Martin Obaze",
